tests/pass/run/callback_return_value_parity/main.kira
function makePrinter(): (Int) -> Void {
    return { value in
        print(value)
    }
}

@Main
function main() {
    let printer = makePrinter()
    printer(5)
    return
}
