tests/fail/parser/trailing_callback_missing_in/main.kira
function resize(handler: (Int, Int) -> Void) {
    return
}

@Main
function main() {
    resize { width, height
        print(width)
    }
    return
}
